2015-01-12  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Check if pkg-config was found. Abort and log a fatal
	error if it is not found.

2015-01-12  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 8.0+beta6.

2015-01-12  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 8.0+beta5 release.

	* CHANGES: Updated.

2015-01-08  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/openvas_server.c (server_attach_internal): Use unsigned int for
	retries, to avoid passing negatives to the sleep function.

2015-01-08  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/openvas_server.c (server_attach_internal): Sleep between retries
	of gnutls_handshake.

2015-01-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* INSTALL: Update to mention netsnmp for improved SNMP support.

2015-01-06  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* base/openvas_file.c (openvas_export_file_name): Add parameters
	name and format_name and support new placeholders %F (report format)
	and %N (name). Escape quote marks (") in format string.

	* base/openvas_file.h (openvas_export_file_name): Update parameters.

2014-12-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_http.c (_http_req): Added comments to explain the handling
	of port 80 and 443.

2014-12-29  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_http.c (_http_req): Don't append port number in host header
	in 443 value case too.

2014-12-29  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_http.c (_http_req): Don't append port number to http host
	header when its value is 80.

2014-12-19  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/wmi-howto.txt: Document location of latest patch and describe
	how the patch should be applied.

2014-12-17  Hani Benhabiles <hani.benhabiles@greenbone.net>
